# github-rag-assistant

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  app.py  github.py  main.py  pyproject.toml  rag.py  rag_llamastack.py
deploy/helm/: Makefile
deploy/helm/rag/: Chart.yaml  values.yaml
src/: agent.py  app.py  github.py  pokemon.txt  rag.py  rag_llamastack.py
