[project]
name = "github-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "llama-stack>=0.2.10.1",
    "ollama>=0.5.1",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
